--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,3 +13,21 @@ body{
     border: 1px solid #ddd;
     margin: 0 auto;
 }
+
+#cabecera{
+
+    background-color: deepskyblue;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0, 0.5);
+    font-size: 2em;
+
+}
+#cabecera #tagline{
+
+    padding: 0 0 0 2em;
+    font-weight: normal;
+ 
+}
